# awesome-kaa

./: .gitignore  README.md
examples/demo/: CMakeLists.txt
examples/demo/schema/: ir.ac.aut.ceit.demo.sample.v1.avsc
examples/demo/src/: CMakeLists.txt  main.c  notification.c  notification.h
examples/lamp/: CMakeLists.txt
examples/lamp/src/: CMakeLists.txt  main.c
examples/license-plate/: CMakeLists.txt  configuration-schema.json  data-schema.json  main.c
examples/license-plate/schema/: configuration-schema.json
examples/license-plate/src/: CMakeLists.txt  main.c
kaa/: Makefile  kaa.tex
kaa/diags/: kaa-arch.vsdx
led/: CMakeLists.txt
led/src/: CMakeLists.txt  main.c  user.c  user.h  util.h
parham/: CMakeLists.txt
parham/schema/: delete-nofitication-schema.avsc
parham/src/: CMakeLists.txt  event.c  event.h  main.c  notification.c  notification.h
poc/: .gitignore  CMakeLists.txt
poc/schema/: boot_animation-nofitication-schema.avsc  parham-profile-schema.avsc
poc/src/: CMakeLists.txt  event.c  main.c  util.h
roadmap/: architecture.vsdx
roadmap/architecture/: architecture.vsdx  ps.vsdx
roadmap/slides/: Makefile  aut.sty  roadmap.tex
